Updated settings securely + added .env

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-
-# Django
-db.sqlite3
-*.log
-
-# Virtual env
 venv/
-env/
-.venv/
-
-# VS Code
-.vscode/
-
-# OS files
-.DS_Store
-Thumbs.db
+*.pyc
+__pycache__/
+db.sqlite3
+.env
+settings_local.py
